--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -26,7 +26,9 @@
   .navb > .navb-links {
     display: inline;
     float: right;
+    right: 38%;
     font-size: 18px;
+    position: relative;
   }
   .navb > .navb-links > ul li a{
     display: block;
@@ -90,6 +92,15 @@
       width: 50px;
       height: 50px;
       padding: 13px;
+    }
+    .navb > .navb-links > ul li a{
+      color: #eee;
+  
+    }
+    .navb > .navb-links > ul li a:hover{
+        background-color: #54afab;
+        color: #eee;
+        border-radius: 5px;
     }
     .navb > .navb-btn > label:hover,.navb  #navb-check:checked ~ .navb-btn > label {
       background-color: #54afa6;
